add visual page

--- a/config.json
+++ b/config.json
@@ -1,3 +1,114 @@
 {
-    "script_path": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI"
+    "script_path": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI",
+    "temp_dir": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\temp",
+    "path_to_detect_model": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_detect\\best_detect_3.pt",
+    "path_to_segment_model": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_seg\\.14",
+    "path_to_detect_model_bbox": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_detect\\best_detect_bbox.pt",
+    "path_to_detect_model_minibbox": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_detect\\best_detect_minibbox.pt",
+    "path_to_detect_model_bboxstick": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_detect\\best_detect_bboxstick.pt",
+    "path_to_uploaded_image": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\temp\\uploaded_image",
+    "path_to_main_image": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\temp\\main_image",
+    "path_to_bbox": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\temp\\bbox",
+    "path_to_minibbox": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\temp\\minibbox",
+    "path_to_bboxstick": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\temp\\bboxstick",
+    "path_to_inference": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\inference",
+    "path_to_font": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\img\\Arial.ttf",
+    "dir_paths": {
+        "script_path": "script_path",
+        "temp_dir": "temp_dir",
+        "path_to_detect_model": "path_to_detect_model",
+        "path_to_segment_model": "path_to_segment_model",
+        "path_to_detect_model_bbox": "path_to_detect_model_bbox",
+        "path_to_detect_model_minibbox": "path_to_detect_model_minibbox",
+        "path_to_detect_model_bboxstick": "path_to_detect_model_bboxstick",
+        "path_to_uploaded_image": "path_to_uploaded_image",
+        "path_to_main_image": "path_to_main_image",
+        "path_to_bbox": "path_to_bbox",
+        "path_to_minibbox": "path_to_minibbox",
+        "path_to_bboxstick": "path_to_bboxstick",
+        "path_to_inference": "path_to_inference",
+        "path_to_font": "path_to_font"
+    },
+    "uploaded_images": null,
+    "results_detect": null,
+    "results_segment": null,
+    "results_detect_bbox": null,
+    "results_detect_minibbox": null,
+    "results_detect_bboxstick": null,
+    "main_image": null,
+    "bbox": null,
+    "minibbox": null,
+    "bboxstick": null,
+    "boxes_": null,
+    "boxes_bbox": null,
+    "boxes_minibbox": null,
+    "boxes_bboxstick": null,
+    "cont_load_images": null,
+    "start_time": null,
+    "end_time": null,
+    "execution_time": null,
+    "progress": null,
+    "cont_param": null,
+    "apply_param_button": null,
+    "clean_temp_button": null,
+    "input_scale_param": null,
+    "input_scale_bool": true,
+    "apply_param_bool": false,
+    "radio_scale_button": false,
+    "dir_params": {
+        "uploaded_images": "uploaded_images",
+        "results_detect": "results_detect",
+        "results_segment": "results_segment",
+        "results_detect_bbox": "results_detect_bbox",
+        "results_detect_minibbox": "results_detect_minibbox",
+        "results_detect_bboxstick": "results_detect_bboxstick",
+        "main_image": "main_image",
+        "bbox": "bbox",
+        "minibbox": "minibbox",
+        "bboxstick": "bboxstick",
+        "boxes_": "boxes_",
+        "boxes_bbox": "boxes_bbox",
+        "boxes_minibbox": "boxes_minibbox",
+        "boxes_bboxstick": "boxes_bboxstick",
+        "cont_load_images": "cont_load_images",
+        "start_time": "start_time",
+        "end_time": "end_time",
+        "execution_time": "execution_time",
+        "progress": "progress",
+        "cont_param": "cont_param",
+        "apply_param_button": "apply_param_button",
+        "clean_temp_button": "clean_temp_button",
+        "input_scale_param": "input_scale_param",
+        "input_scale_bool": "input_scale_bool",
+        "apply_param_bool": "apply_param_bool",
+        "radio_scale_button": "radio_scale_button"
+    },
+    "segmented_images": [],
+    "segmented_results": [],
+    "list_path_to_uploaded_images": [],
+    "list_path_to_bbox": [],
+    "list_path_to_main_image": [],
+    "list_path_to_minibbox": [],
+    "list_path_to_bboxstick": [],
+    "list_path_to_inference": [],
+    "list_image_copy_with_mask": [],
+    "scale": [],
+    "stick": [],
+    "name_uploaded_images": [],
+    "name_uploaded_images_without_ex": [],
+    "dir_lists": {
+        "segmented_images": "segmented_images",
+        "segmented_results": "segmented_results",
+        "list_path_to_uploaded_images": "list_path_to_uploaded_images",
+        "list_path_to_bbox": "list_path_to_bbox",
+        "list_path_to_main_image": "list_path_to_main_image",
+        "list_path_to_minibbox": "list_path_to_minibbox",
+        "list_path_to_bboxstick": "list_path_to_bboxstick",
+        "list_path_to_inference": "list_path_to_inference",
+        "list_image_copy_with_mask": "list_image_copy_with_mask",
+        "scale": "scale",
+        "stick": "stick",
+        "name_uploaded_images": "name_uploaded_images",
+        "name_uploaded_images_without_ex": "name_uploaded_images_without_ex"
+    }
 }
