Torch -> Tensorflow (seg)

--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
     "script_path": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI",
     "temp_dir": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\temp",
-    "path_to_detect_model": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_detect\\best_detect_3.pt",
-    "path_to_segment_model": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_seg\\.14",
+    "path_to_class_model": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_class\\EfficientNetB3_weights.h5",
+    "path_to_detect_model": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_detect\\last_detect_9c.pt",
+    "path_to_segment_model": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_seg\\2024_04_10_05_59_16_UEfficientNetB3_weights.h5",
     "path_to_detect_model_bbox": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_detect\\best_detect_bbox.pt",
     "path_to_detect_model_minibbox": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_detect\\best_detect_minibbox.pt",
     "path_to_detect_model_bboxstick": "C:\\Users\\NightMare\\PycharmProjects\\MicroscopeAI\\weights\\weights_detect\\best_detect_bboxstick.pt",
@@ -16,6 +17,7 @@
     "dir_paths": {
         "script_path": "script_path",
         "temp_dir": "temp_dir",
+        "path_to_class_model": "path_to_class_model",
         "path_to_detect_model": "path_to_detect_model",
         "path_to_segment_model": "path_to_segment_model",
         "path_to_detect_model_bbox": "path_to_detect_model_bbox",
@@ -49,6 +51,7 @@
     "execution_time": null,
     "progress": null,
     "cont_param": null,
+    "radio_class_button": false,
     "apply_param_button": null,
     "clean_temp_button": null,
     "input_scale_param": null,
@@ -76,6 +79,7 @@
         "execution_time": "execution_time",
         "progress": "progress",
         "cont_param": "cont_param",
+        "radio_class_button": "radio_class_button",
         "apply_param_button": "apply_param_button",
         "clean_temp_button": "clean_temp_button",
         "input_scale_param": "input_scale_param",
