--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+openmim
+mmengine --mim
+mmocr --mim
+mmcv==2.0.0rc4 --mim
 albumentations==1.4.2
-easyocr==1.7.1
 hydralit-components==1.0.10
 Markdown==3.6
 numpy==1.26.4
@@ -11,3 +14,4 @@ streamlit==1.32.2
 streamlit-lottie==0.0.5
 tqdm==4.66.2
 ultralytics==8.1.36
+segmentation_models
